--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@
     background: rgba(255,255,255,.2)!important;
 }
 
+#grid li header {
+    background: #999;
+    display: block;
+    font-size: 20px;
+    line-height: normal;
+    padding: 4px 0 6px ;
+    margin-bottom: 20px;
+    cursor: move;
+}
+
 ul {
     list-style-type: none;
 }
