--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     background: rgba(255,255,255,.2)!important;
 }
 
-#grid li header {
+#grid li .drag-handle {
     background: #999;
     display: block;
     font-size: 20px;
