--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+html, body, #grid {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+}
+
+#grid {
+    margin-top: -16px;
+}
+
 /*gridster styles*/
 #grid .gs-w {
     background: #FFF;
