--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@ body {
     margin: 0;
 }
 
+h1 {
+    font-family: 'Ubuntu', sans-serif;
+}
+
+
+/*///////////////////////////////////////////////////////////////////////////////////////*/
+/*///////////////////////////////////////////////////////////////////////////////////////*/
+
+
 #grid {
     margin-top: -16px;
 }
