--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ h1 {
     font-family: 'Ubuntu', sans-serif;
 }
 
+.editor {
+    resize: none;
+    border: none;
+}
+
 
 /*///////////////////////////////////////////////////////////////////////////////////////*/
 /*///////////////////////////////////////////////////////////////////////////////////////*/
