--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ h1 {
     font-family: 'Ubuntu', sans-serif;
 }
 
+p {
+    font-family: 'Ubuntu', sans-serif;
+}
+
 .editor {
     resize: none;
     border: none;
